<resources>
    <string name="app_name">Account Book</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="money_spent">Money Spent</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="manage_book">Manage Book</string>
    <string name="add_money">Add Money</string>
    <string name="add_person">Add Person</string>
    <string name="no_data">No Data</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="select_sponsor_name">Sponsor Name</string>
    <string name="money_spend">Money</string>
    <string name="date">Date</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="enter_valid_no">Enter Valid Mobile Number</string>
    <string name="name_exist">Name Already Exist</string>
    <string name="number_exist">Mobile Number Already Exist</string>
    <string name="person_added_success">Successfully %s added</string>
    <string name="error_occured">Error Occurred</string>
    <string name="select_person">Select Person</string>
    <string name="select_sponsor">Please Select Sponsor Name</string>
    <string name="enter_money_spend">Enter Money Spend</string>
    <string name="select_date">Select Date</string>
    <string name="select_consumed_person">Check at least one consumed person</string>
    <string name="money_adde_success">Money added successfully</string>
    <string name="person_info">Person Info</string>
    <string name="add_atleast_2_persons">Add at least two persons</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="money_sponsored">Money Sponsored</string>
    <string name="want_to_exit">Are you sure want to exit ?</string>
    <string name="want_to_clear_spend_data">Are you sure want to clear spend data ?</string>
    <string name="data_no_available">Data not available</string>
    <string name="spend_muney_cleared_success">Successfully cleared the spend money data</string>
    <string name="clear_spend_data">Clear Spend Data</string>
    <string name="want_to_delete">Are you sure want to delete %s</string>
    <string name="person_delete_success">%s successfully deleted</string>
    <string name="spend_for">Spend For</string>
    <string name="enter_spend_for">Enter reason to spend for</string>
    <string name="version">Version 1.1</string>
    <string name="sure_want_to_remove_record">Are you sure want to remove record ?</string>
    <string name="record_deleted_success">Record deleted successfully</string>
</resources>
