<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:alpha=".5"
        android:background="@drawable/add_money2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:background="@drawable/img_store_gopremium_right2"
        android:visibility="gone" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/padding32">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:fontFamily="@font/pt_sans"
                android:text="@string/select_sponsor_name"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spSponsar"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etMoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_money_spend"
                        android:drawablePadding="@dimen/padding10"
                        android:fontFamily="@font/pt_sans"
                        android:hint="@string/money_spend"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding10"
                    android:layout_weight="0.8">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:drawableLeft="@drawable/icon_date"
                        android:drawablePadding="@dimen/padding10"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/pt_sans"
                        android:hint="@string/date"
                        android:imeOptions="actionNext"
                        android:inputType="none"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spTime"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/padding10"
                    android:background="@drawable/elivated_bg"
                    android:entries="@array/day_modes"
                    android:padding="@dimen/padding5" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10">

                <EditText
                    android:id="@+id/etSpendFor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spend_for"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/vPersonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding32" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done" />


</FrameLayout>